# core-animation-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.github/workflows/: build.yml  dependabot-auto-merge.yml  publish.yml  release-plz.yml
examples/: README.md  basic_layers.rs  breathing_circle.rs  emitter.rs  glxgears.rs  loading_spinner.rs  neon_glow.rs  particle_images.rs  point_burst.rs  ripple_rings.rs  staggered_dots.rs  test_window_visibility.rs  window_builder.rs
src/: duration_ext.rs  lib.rs  path_builder.rs  shape_layer_builder.rs
tools/: update-example-screenshots.sh
tools/patches/: cargo-recording-feature.patch  examples-recording-feature.patch  recording-feature.patch
